Bug 46609 - [4.6 Regression] Failed to bootstrap with --enable-checking=assert
Summary: [4.6 Regression] Failed to bootstrap with --enable-checking=assert
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.6.0
: P3 normal
Target Milestone: 4.6.0
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-11-22 19:34 UTC by H.J. Lu
Modified: 2010-11-22 20:36 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2010-11-22 19:34:36 UTC
Revision 167024:

http://gcc.gnu.org/ml/gcc-cvs/2010-11/msg00913.html

breaks bootstrap with --enable-checking=assert:

/net/gnu-13/export/gnu/src/gcc/gcc/gcc/gengtype.c: In function ‘header_dot_h_frul’:
/net/gnu-13/export/gnu/src/gcc/gcc/gcc/gengtype.c:1870:15: error: unused variable ‘inpname’ [-Werror=unused-variable]
/net/gnu-13/export/gnu/src/gcc/gcc/gcc/gengtype.c:1866:60: error: unused parameter ‘pforname’ [-Werror=unused-parameter]
/net/gnu-13/export/gnu/src/gcc/gcc/gcc/gengtype.c: In function ‘source_dot_c_frul’:
/net/gnu-13/export/gnu/src/gcc/gcc/gcc/gengtype.c:1910:15: error: unused variable ‘inpname’ [-Werror=unused-variable]
cc1: all warnings being treated as errors
Comment 1 hjl@gcc.gnu.org 2010-11-22 19:56:32 UTC
Author: hjl
Date: Mon Nov 22 19:56:25 2010
New Revision: 167049

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=167049
Log:
Add check for ENABLE_CHECKING,

2010-11-22  H.J. Lu  <hongjiu.lu@intel.com>

	PR bootstrap/46609
	* gengtype.c (header_dot_h_frul): Check ENABLE_CHECKING.
	(source_dot_c_frul): Likewise.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/gengtype.c
Comment 2 H.J. Lu 2010-11-22 20:36:59 UTC
Fixed.